fix (maybe) for online ents and waitlist overflow

--- a/app/components/Sidebar/Waitlist/Waitlist.scss
+++ b/app/components/Sidebar/Waitlist/Waitlist.scss
@@ -35,6 +35,7 @@
 
 .waitlist-list {
   padding: 0;
+  margin-bottom:50px;
 }
 
 .waitlist-position {
